# new_detector

armor_detector/: CMakeLists.txt  package.xml
armor_detector/include/armor_detector/: armor_detector_node.hpp
armor_detector/include/armor_detector/tasks/: base.hpp  classify.hpp  detect.hpp  estimate.hpp  yolo.hpp
armor_detector/include/armor_detector/tools/: img_tools.hpp  math_tools.hpp  params.hpp  types.hpp
armor_detector/src/: armor_detector_node.cpp
armor_detector/src/tasks/: classify.cpp  detect.cpp  estimate.cpp  yolo.cpp
armor_detector/src/tools/: types.cpp
rm_bringup/: package.xml
rm_bringup/config/: launch_params.yaml
rm_bringup/config/node_params/: armor_detector_params.yaml  dahua_camera_driver_params.yaml  hik_camera_driver_params.yaml  serial_driver_params.yaml  virtual_driver_params.yaml
rm_bringup/launch/: bringup.launch.py
rm_hardware_driver/rm_camera_driver/: CMakeLists.txt  package.xml
rm_hardware_driver/rm_camera_driver/include/GenICam/: Frame.h
rm_hardware_driver/rm_camera_driver/include/GenICam/CameraLink/: CLCamera.h  CLInterface.h
rm_hardware_driver/rm_camera_driver/include/Infra/: Function.h  SignalTemplate.h
rm_hardware_driver/rm_camera_driver/include/Memory/: SharedPtr.h
rm_hardware_driver/rm_camera_driver/include/Memory/Detail/: shared_count.h
rm_hardware_driver/rm_camera_driver/include/rm_camera_dahua/: Camera_Control.h  dahua_camera.hpp
rm_hardware_driver/rm_camera_driver/src/: Camera_Control.cpp  dahua_camera.cpp
rm_hardware_driver/rm_hik_camera_driver/: CMakeLists.txt  package.xml
rm_hardware_driver/rm_hik_camera_driver/src/: hik_camera_node.cpp
rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/: fixed_packet.hpp  protocol_factory.hpp  serial_utils.hpp  transporter_interface.hpp
rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/protocol/: default_protocol.hpp  sentry_protocol.hpp
rm_hardware_driver/rm_serial_driver/src/: serial_driver_node.cpp  virtual_serial_node.cpp
rm_hardware_driver/rm_serial_driver/src/protocol/: infantry_protocol.cpp  sentry_protocol.cpp
rm_hardware_driver/rm_serial_driver/src/transporter_driver/: uart_transporter.cpp
rm_interfaces/: CMakeLists.txt  package.xml
rm_interfaces/msg/: Armors.msg  ChassisCmd.msg  GimbalCmd.msg  SerialReceiveData.msg
rm_serial_driver/: CMakeLists.txt  package.xml
rm_serial_driver/include/rm_serial_driver/: fixed_packet_tool.hpp  protocol.hpp  serial_driver_node.hpp  uart_transporter.hpp
rm_serial_driver/include/rm_serial_driver/protocol/: infantry_protocol.hpp
rm_serial_driver/src/protocol/: default_protocol.cpp
rm_serial_driver/test/: dummy_transporter.hpp  test_fixed_packet_tool.cpp
rm_utils/: CMakeLists.txt  package.xml
rm_utils/include/rm_utils/: modes.hpp  pkaLoggerCenter.hpp  tf_helper.hpp  url_resolver.hpp
rm_utils/src/: heartbeat.cpp  pkaLoggerCenter.cpp  tf_helper.cpp  url_resolver.cpp
